--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "esp.c" "wifi_station.c"
+idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c"
                     INCLUDE_DIRS ".")
