Basic POST route

--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,2 +1,3 @@
 idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c" "api_server.c"
+                    "api_controller.c"
                     INCLUDE_DIRS ".")
