--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c" "api_server.c"
-                    "api_controller.c"
+                    "api_controller.c" "api_auth.c" "cookie_helper.c"
                     INCLUDE_DIRS ".")
