--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c" "api/api_server.c"
-                    "api/api_controller.c" "api/api_auth.c" "api/cookie_helper.c"
+                    "api/api_controller.c" "api/api_auth.c"
                     INCLUDE_DIRS ".")
