--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c" "api/api_server.c"
                     "api/api_controller.c" "api/api_auth.c" "api/models/password_model.c"
+                    "water_control.c"
                     INCLUDE_DIRS ".")
