--- a/esp/main/CMakeLists.txt
+++ b/esp/main/CMakeLists.txt
@@ -1,4 +1,5 @@
-idf_component_register(SRCS "esp.c" "wifi_station.c" "watering.c" "api/api_server.c"
+idf_component_register(SRCS "esp.c" "wifi_station.c" "watering/watering.c" "api/api_server.c"
 	"api/api_controller.c" "api/api_auth.c" "api/models/password_model.c"
-	"water_control.c"
-	INCLUDE_DIRS ".")
+	"watering/water_control.c" "github_ota.c"
+	INCLUDE_DIRS "."
+	EMBED_TXTFILES github_cert.pem)
